Actions
Bug #7712
closedmandoc -Tlint does always exit with error code 0
Start date:
2016-12-30
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
tsoome@beastie:/code/illumos-gate$ ./usr/src/tools/proto/root_i386-nd/opt/onbld/bin/i386/mandoc -Tlint -W warning,stop usr/src/man/man1/stty.1 && echo ok
mandoc: usr/src/man/man1/stty.1:49:2: WARNING: skipping paragraph macro: sp after SH
mandoc: usr/src/man/man1/stty.1:73:2: WARNING: skipping paragraph macro: sp after SH
mandoc: usr/src/man/man1/stty.1:97:2: WARNING: skipping paragraph macro: sp after SH
ok
unfortunately this does break git pbchk as its internal processcheck depends on exit code.
Updated by Yuri Pankov over 5 years ago
- Status changed from New to In Progress
- Assignee set to Yuri Pankov
- % Done changed from 0 to 50
- Difficulty changed from Medium to Bite-size
- Tags deleted (
needs-triage)
Regression in 1.13.4.
Updated by Yuri Pankov over 5 years ago
From Ingo Schwarze (upstream):
Failures in the checks that were moved to mdoc_validate() and man_validate() got ignored in the mandoc(1) EXIT STATUS, which was wrong.
Updated by Electric Monk over 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 50 to 100
git commit a593473611dc9e109c40317ce52161b8cfe015ff
commit a593473611dc9e109c40317ce52161b8cfe015ff Author: Yuri Pankov <yuri.pankov@nexenta.com> Date: 2017-01-10T23:06:10.000Z 7712 mandoc -Tlint does always exit with error code 0 Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Robert Mustacchi <rm@joyent.com>
Actions